themes/hueman/source/css/landingpage/style.css
/* ... */
/*-----------------------------------------------------------------------------------*/
/*	PRICING
/*-----------------------------------------------------------------------------------*/

.pricing{
	padding: 80px 0px 0px 0px;
	background: #006bde;
}

.pricing p.lead{
	color: #ddd
}

.pricing div.pricing-table {
  min-width: 100%;
  display: inline-block;
  font-size: 1.6em;
  text-transform: uppercase;
  padding: 1.2em 2em;
  background: rgba(255,255,255,0.8);
  text-align: left;
}

.pricing div.pricing-table table {
  width: 100%;
}

.pricing div.pricing-table-context h3, .pricing div.pricing-table-context h4 {
	color: #333;
}

.pricing div.pricing-table-context {
	background: rgba(255,255,255,0.4);
	font-size: 1.2em;
}

/*-----------------------------------------------------------------------------------*/
/*	GET-IT
/*-----------------------------------------------------------------------------------*/

.get-it{
	background: #1976d2;
	padding: 100px 0px 160px 0px;
	text-align: center;
}

.get-it h1 {
	color: #fff;
}

.get-it button.app-store{
	width: 152px;
	height: 52px;
	background: url(../../img/landingpage/badge-appstore.png) #373737 no-repeat 0px 5px;
	color: white;
}

.get-it hr{
	margin-top: 3em;
	margin-bottom: 3em;
}

.get-it ul{
	list-style-type: none;
	text-align: center;
	margin: 0;
	padding: 0;
}

.get-it ul li{
	display: inline-block;
	margin-left:30px;
}

.get-it ul li:first-child{
	margin-left: 0px;
}

.get-it ul li a{
	color: #FBFBFB;
	font-size: 1.2em;
	-webkit-transition: all 300ms ease-in-out;
	-moz-transition: all 300ms ease-in-out;
	-ms-transition: all 300ms ease-in-out;
	-o-transition: all 300ms ease-in-out;
	transition: all 300ms ease-in-out;
}

.get-it ul li a:hover{
	color: #3A3A3A;
	text-decoration: none;
	cursor: pointer;
}

.get-it .footer-links .footer-link-light {
	font-weight: 300;
	font-size: 0.8em;
}


/*-----------------------------------------------------------------------------------*/
/*	MEDIA QUERIES
/*-----------------------------------------------------------------------------------*/

/*@media (max-width:768px) {

	header{
		padding-bottom: 50px;
		height: 100%;
	}

	.navbar-nav {
		float: left;
		text-align: left;
}


}*/

@media (max-width:780px) {

	header{
		height: 815px;
	}

	header p.lead{
		margin-bottom: -100px;
	}

	.detail .carousel h1, .detail p{
		text-align: center;
	}

	header .carousel-macbook {
		width: 620px;
	  height: 358px;
	  margin-top: 150px;
	}

	.carousel-macbook .detail .app-screenshot{
		width: 280px;
	}

	header .carousel, .detail .app-screenshot img{
		padding-top: 31px;
		width: 443px;
		padding-left: 4px;
	}

	header .carousel-inner {
	  height: 274px;
	}

	.detail .app-screenshot img{
		margin-top: 0px;
	  padding-top: 0px;
	  width: 278px;
	}

	.detail p{
			margin-bottom: 60px;
	}

	header{
		background-position-y: 0px;
		background-size: 200%;
	}

	.social{
		background-position-y: -85px;
		background-size: 200%;
		padding: 20px 0;
		min-height: 150px;
	}

	.features{
		padding: 50px 0;
	}

	.features.intro iframe{
		width: 400px;
	}

	.payoff{
		padding-top: 50px;
		padding-bottom: 50px;
		min-height: 200px;
	}

	.payoff h1{
		font-size: 24px;
	}

	.features .col-md-4{
		margin-bottom: 60px;
	}

}

@media (max-width:640px){

	header .carousel-iphone, .detail .app-screenshot{
		width: 280px;
	}

	header .carousel-macbook {
		width: 420px;
		height: 245px;
		margin-top: 150px;
	}

	header .carousel-inner{
		height: 185px;
	}

	.carousel-macbook .detail .app-screenshot{
		width: 280px;
	}

	header .carousel, .detail .app-screenshot img{
		padding-top: 22px;
    width: 300px;
    padding-left: 3px;
	}

	.detail .app-screenshot img{
		margin-top: -12px;
		padding-top: 0px;
		width: 244px;
	}


	header{
		height: 560px;
		padding-top: 30px;
		padding-bottom: 0px;
	}

	header h1{
		font-size: 70px;
	}

	.features{
		padding: 50px 0;
	}

	.features.intro iframe{
		width: 400px;
	}

	.purchase{
		padding-top: 160px;
	}

	.social{
		background-position-y: -85px;
    background-size: 200%;
    padding: 20px 0;
    min-height: 150px;
	}

	.features col-md-4{
		margin-bottom: 50px;
	}

}

@media (max-width:480px){
	header{
		height: 400px
	}

	header p.lead{
		font-size: 24px;
	}

	header .carousel-iphone, .detail .app-screenshot{
		width: 280px;
	}

	header .carousel-macbook {
		width: 300px;
    height: 176px;
    margin-top: 150px;
	}

	header .carousel-inner{
		height: 132px;
	}

	.carousel-macbook .carousel {
		width: 216px;
		padding-top: 15px
	}
}

@media (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi) {
    /* Retina-specific stuff here */
    .purchasebutton.app-store, .get-it button.app-store{
        background: url(../../img/landingpage/badge-appstore@2x.png) #3a3a3a no-repeat 0px 5px;
        background-size: 98%;
    	color: white;
    }
}




#nudgespotInappContainer .nudgespot-launcher .nudgespot-launcher-inner {
  background-color: #1976D2 !important;
}
#nudgespotInappContainer .nudgespot-welcome-bubble .nudgespot-welcome-header {
  background-color: #1976D2 !important;
}
#nudgespotInappConversationsContainer .nudgespot-messages-container .nudgespot-new-conversation-content .nudgespot-welcome-message .nudgespot-welcome-message-header,
#nudgespotInappMessagesContainer .nudgespot-messages-container .nudgespot-new-conversation-content .nudgespot-welcome-message .nudgespot-welcome-message-header {
  background-color: #1976D2 !important;
}
#nudgespotInappMessagesContainer .nudgespot-messages-container .nudgespot-message-content-container .nudgespot-message-details.nudgespot-message-subscriber .nudgespot-message-body {
  background-color: #1976D2 !important;
}
#nudgespotInappContainer .nudgespot-button,
#nudgespotInappConversationsContainer .nudgespot-button,
#nudgespotInappMessagesContainer .nudgespot-button {
  background-color: #1976D2 !important;
}
/* ... */

